force-app/main/default/objects/Contact_Communication__c/Contact_Communication__c.object-meta.xml
<CustomObject>
    <label>Contact Communication</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Communication Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>