force-app/main/default/objects/Contact_Communication__c/fields/Full_ContactCommunication_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_ContactCommunication_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full ContactCommunication Id</label>
    <type>Text</type>
</CustomField>