force-app/main/default/objects/Contact_Communication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Subject__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>